# rawcd

./: .gitignore  DESIGN.md  PRODUCT.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
docs/superpowers/plans/: 2026-06-07-rawcd-two-lane-restore.md
docs/superpowers/specs/: 2026-06-07-rawcd-two-lane-restore-design.md
rawcd/: __init__.py  ai_repair.py  api.py  converter.py  damage.py  devices.py  disc.py  exporter.py  ffmpeg_tools.py  jobs.py  models.py  parser.py  recovery.py  repair.py  repair_pipeline.py  reports.py  rights.py  server.py  settings.py  source.py  timeline.py
rawcd/providers/: __init__.py  base.py  cloud.py  local.py  ollama.py  topaz.py
src/: appState.test.ts  appState.ts  engineClient.test.ts  engineClient.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tests/: test_ai_repair.py  test_api.py  test_converter.py  test_damage.py  test_devices.py  test_disc_detection.py  test_exporter.py  test_ffmpeg_tools.py  test_jobs.py  test_models.py  test_parser.py  test_providers_base.py  test_providers_cloud.py  test_providers_local.py  test_providers_ollama.py  test_providers_topaz.py  test_recovery.py  test_repair_pipeline.py  test_reports.py  test_rights.py  test_server.py  test_settings.py  test_source.py  test_timeline.py
