[package]
name = "rawcd"
version = "0.1.0"
description = "RawCD desktop shell"
authors = ["RawCD"]
edition = "2021"

[lib]
name = "rawcd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "rawcd"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.2", features = [] }
tokio = { version = "1", features = ["time"] }
